# sd_benchmark

./: Cargo.toml  README.md  paper_plots.ipynb
csv_dir/: 100_vp_issuance_duration.csv  100_vp_jwt_length.csv  100_vp_verification_duration.csv  10_vp_issuance_duration.csv  10_vp_jwt_length.csv  10_vp_verification_duration.csv  20_vp_issuance_duration.csv  20_vp_jwt_length.csv  20_vp_verification_duration.csv  30_vp_issuance_duration.csv  30_vp_jwt_length.csv  30_vp_verification_duration.csv  40_vp_issuance_duration.csv  40_vp_jwt_length.csv  40_vp_verification_duration.csv  50_vp_issuance_duration.csv  50_vp_jwt_length.csv  50_vp_verification_duration.csv  60_vp_issuance_duration.csv  60_vp_jwt_length.csv  60_vp_verification_duration.csv  70_vp_issuance_duration.csv  70_vp_jwt_length.csv  70_vp_verification_duration.csv  80_vp_issuance_duration.csv  80_vp_jwt_length.csv  80_vp_verification_duration.csv  90_vp_issuance_duration.csv  90_vp_jwt_length.csv  90_vp_verification_duration.csv  Office.csv  initialization_duration.csv  issuer_keypair_length.csv  vc_issuance_duration.csv  vc_jwt_length.csv  vc_verification_duration.csv
src/: benchmark.rs  common_data.rs  csv_writer.rs  lib.rs  main.rs
src/adapters/hashes/: hmac_adapter.rs
src/adapters/monoclaim/: monoclaim_adapter.rs
src/adapters/signatures/: cl_adapter.rs  ps_adapter.rs
src/our_impl/pointcheval_sanders/: ps_message.rs  ps_private_key.rs  ps_public_key.rs  ps_signature.rs
src/sd_algorithms/: mod.rs
src/sd_algorithms/hashes/: hash_sd_algorithm.rs  hmac.rs  merkle_trees.rs  mod.rs  sd_jwt.rs
(+4 files in other folders)
