[package]
name = "sd_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
josekit = "0.8.7"
serde = { version = "1.0.210", default-features = false }
serde_json = { version = "1.0.128", default-features = false }
rand = "0.9.0-alpha.2"
multibase = "0.9.1"
zkryptium = {  version = "0.5.0" }
digest = "0.10.6"
sha2 = "0.10.6"
rs_merkle = "1.4.2"
csv = "1.3.1"

ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"

[features]
cl03 = ["zkryptium/cl03"]
default = ["cl03"]